// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input cssContainer API sets input container className 1`] = `
<body>
  <div>
    <div
      class="test-class"
      role="presentation"
    >
      <div
        class="label-wrapper"
      >
        <label
          class="label"
          for="foo"
        >
          the label
        </label>
      </div>
      <div
        class="control-container"
      >
        <input
          aria-describedby="fooHint"
          class="input"
          id="foo"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Input has defaults 1`] = `
<body>
  <div>
    <div
      role="presentation"
    >
      <div
        class="label-wrapper"
      >
        <label
          class="label"
          for="foo"
        >
          the label
        </label>
      </div>
      <div
        class="control-container"
      >
        <input
          aria-describedby="fooHint"
          class="input"
          id="foo"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Input has defaults 2`] = `
Object {
  "dirty": false,
  "id": "foo",
  "name": undefined,
  "value": "",
}
`;
